# RL_learning

./: .gitignore  Makefile  iterative_policy_evaluation_deterministic.py  pyproject.toml
notebooks/rl2/cart_pole/: REINFORCE_playground.ipynb  actor_critic_playground.ipynb  cartpole_qlearning_rbf.ipynb  cartpole_qlearning_w_bins.ipynb  pg_pytorch.ipynb
notebooks/rl2/mountain_car/: mountain_car_q_learning_rbf.ipynb  n_step_mtn_car.ipynb  td_lambda_mtn_car.ipynb
notebooks/section5_dp/: iterative policy evaluation DP.ipynb  policy_eval_DP_determinstic_probabilistic.ipynb  policy_iteration_DP.ipynb  value_iteration.ipynb
notebooks/section6_mc/: monte_carlo.ipynb
notebooks/section7_tdlearning/: q_learning.ipynb  sarsa - td control.ipynb  td0.ipynb
notebooks/section8_approx/: approx_predict_control.ipynb  cartpole.ipynb
rl/: approx_control.py  approx_prediction.py  cartpole.py  iterative_policy_evaluation_deterministic.py  iterative_policy_evaluation_probabilistic.py  linear_rl_trader.py  monte_carlo.py  monte_carlo_es.py  monte_carlo_no_es.py  monte_carlog_es.py  policy_iteration_deterministic.py  policy_itereation_probabilisitic.py  q_learning.py  sarsa.py  td0_prediction.py  value_iteration.py
rl2/: gym_tutorial.py
rl2/cartpole/: random_search.py  save_a_video.py
