[tool.poetry]
name = "udemy-rl-lazyprog"
version = "0.1.0"
description = ""
authors = ["timwee"]
readme = "README.md"
packages = [{include = "udemy_rl_lazyprog"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pandas = "^2.0.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
