[tool.poetry]
name = "udemy-rl-lazyprog"
version = "0.1.0"
description = ""
authors = ["timwee"]
readme = "README.md"
packages = [{include = "udemy_rl_lazyprog"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pandas = "^2.0.0"
sklearn = "^0.0.post1"
gym = "^0.26.2"
scikit-learn = "^1.2.2"
pygame = "^2.3.0"
torch = "^2.0.0"
gymnasium = "^0.28.1"
moviepy = "^1.0.3"
box2d-py = "^2.3.8"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
